--- a/classes.css
+++ b/classes.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  /* background-color: powderblue; */
+  background: rgba(7, 50, 241, 0.181);
   /* text-align: center; */
 
   font-family: Arial, Helvetica, sans-serif;
