--- a/classes.css
+++ b/classes.css
@@ -11,6 +11,8 @@ body {
 
   font-family: Arial, Helvetica, sans-serif;
 
+  display: block;
+
     margin-top: 100px;
     margin-bottom: 100px;
     margin-right: 100px;
