--- a/classes.css
+++ b/classes.css
@@ -7,7 +7,7 @@
 
 body {
   background: rgba(7, 50, 241, 0.181);
-  /* text-align: center; */
+  text-align: center;
 
   font-family: Arial, Helvetica, sans-serif;
 
@@ -36,17 +36,24 @@ h2 {
 
 div.container {
   text-align: center;
+  display: block;
 
 }
 
 div.container1 {
   font-family: Bradley Hand, cursive;
-  text-align: center;
+  /* text-align: center; */
+  /* display: block; */
 
 }
 
 
 ul.myUL {
+  display: inline-block;
+  text-align: left;
+}
+
+ol.myUL1 {
   display: inline-block;
   text-align: left;
 }
